2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListItemCollection.cs: fixed LoadViewState.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableItemStyle.cs: TypeDescriptor.GetConverter seems to fail.
	Commented out some code until it works.

2002-10-29      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseCompareValidator.cs - Fixed operator bug in 
	                            Compare(string, string, ...)
	* CompareValidator.cs     - EvaluateIsValid()            : Implemented.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BoundColumn.cs        - InitializeCell(TableCell, int, ListItemType)
	                                              : Implemented.
	                        - All Properties      : Now make use of ViewState.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - Uncomment NotImplementedException.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - Minor changes in TODO comments.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - DetermineRenderUpLevel()       : Uncomment
	                          the NotImplementedException being thrown.
	* DataGridPagerStyle.cs - Mode { set; }                  : Implemented.
	* DataGridLinkButton.cs - Added new class (private)      : Implemented.
	* DataGrid.cs           - InitializePager(DataGridItem, int,
	                          PagedDataSource)               : Implemented.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* DataList.cs          - PrepareControlHierarchy()       : Implemented.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* DataList.cs          - RenderContents(HtmlTextWriter)  : Implemented.
	                       - GetItem(ListItemType, int)      : Removed TODO.
	                       - CreateControlHierarchy(bool)    : Implemented.
	                       - CreateItem(int, ListItemType)   : Implemented.